--- a/client/src/ui/components/List/List.less
+++ b/client/src/ui/components/List/List.less
@@ -10,7 +10,7 @@
   }
 
   &.margin {
-    margin-top: var(--component-spacing-sm);
+
     margin-bottom: var(--component-spacing-sm);
   }
 
@@ -37,7 +37,7 @@
 }
 
 .ListItem {
-  margin-bottom: var(--component-spacing-xs);
+  padding: 0.6em 0em;
 
   &:before {
     content: '';
