Change the panel structure to be wider and become the primary space (#9)
* Change the panel structure to be wider and become the primary space

* Set project path default value

--- a/client/src/components/hub/CommitNavigation/CommitNavigation.less
+++ b/client/src/components/hub/CommitNavigation/CommitNavigation.less
@@ -2,11 +2,11 @@
 
 .CommitNavigation {
   position: relative;
-  padding-bottom: var(--component-spacing-md);
-  width: 220px;
+  padding: 0 0 var(--component-spacing-md);
+  width: 200px;
   box-sizing: border-box;
   overflow-y: hidden;
-  margin-top: 55px;
+  margin-top: 40px;
 
   .Menu__header {
     background: transparent !important;
