--- a/client/src/ui/components/Container/Container.less
+++ b/client/src/ui/components/Container/Container.less
@@ -6,12 +6,18 @@
   box-sizing: border-box;
   padding: 0 var(--component-spacing-md);
 
+  &.fluid {
+    width: auto;
+  }
+
   @media @xs-min {
     width: auto;
   }
 
   @media @sm-min {
-    width: ~'@{sm-breakpoint}px';
+    &.standard {
+     width: ~'@{sm-breakpoint}px';
+    }
 
     &.small {
       width: ~'@{sm-breakpoint}px';
@@ -19,7 +25,9 @@
   }
 
   @media @md-min {
-    width: ~'@{md-breakpoint}px';
+    &.standard {
+     width: ~'@{md-breakpoint}px';
+    }
 
     &.small {
       width: ~'@{md-breakpoint}px';
@@ -27,7 +35,9 @@
   }
 
   @media @lg-min {
-    width: ~'@{lg-breakpoint}px';
+    &.standard {
+     width: ~'@{lg-breakpoint}px';
+    }
 
     &.small {
       width: ~'calc(0.75 * @{lg-breakpoint}px)';
@@ -35,7 +45,9 @@
   }
 
   @media @xl-min {
-    width: 1200px;
+    &.standard {
+     width: 1200px;
+    }
 
     &.small {
       width: 900px;
@@ -43,7 +55,9 @@
   }
 
   @media @xxl-min {
-    width: 1600px;
+    &.standard {
+     width: 1600px;
+    }
 
     &.small {
       width: 1150px;
