--- a/client/src/wrappers/hub/HubWrapper/HubWrapper.less
+++ b/client/src/wrappers/hub/HubWrapper/HubWrapper.less
@@ -1,13 +1,12 @@
 @import '../../../vars';
 
 .HubWrapper {
-  min-height: 100vh;
   position: relative;
-  width: 100vw;
-  overflow: hidden;
-  background-color: #FFF;
-  padding-bottom: var(--component-spacing-md);
   margin-top: 0;
+  padding-left: @header-width;
+  width: 100vw;
+  box-sizing: border-box;
+  overflow: hidden;
 
   &.gap {
     margin-top: var(--component-spacing-md);
