--- a/client/src/App.less
+++ b/client/src/App.less
@@ -15,3 +15,13 @@
     max-width: 300px;
   }
 }
+
+.LoadingBar__wrapper {
+  position: fixed !important;
+  top: 0 !important;
+  z-index: 22 !important;
+}
+
+.LoadingBar {
+  height: 3px;
+}
