--- a/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
@@ -1,10 +1,10 @@
 @import '../../../../../vars.less';
 
 .ControlPanel {
+  width: 100%;
+  height: 100%;
   position: relative;
-  border: 1px solid var(--primary-lighter);
-  border-radius: var(--border-radius);
-  background-color: var(--primary-bg);
+  background-color: var(--grey-bg-light);
   overflow: hidden;
   user-select: none;
 }
@@ -17,6 +17,15 @@
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.ControlPanel__msg__wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .PopUp__area {
