--- a/client/src/screens/hub/HubMainScreen/components/SearchBar/SearchBar.less
+++ b/client/src/screens/hub/HubMainScreen/components/SearchBar/SearchBar.less
@@ -1,5 +1,17 @@
-@import '../../../../../vars';
-
 .SearchBar {
-  margin-bottom: var(--component-spacing-md);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #FFF;
+  box-sizing: border-box;
+  border-bottom: 1px solid var(--grey-lighter);
+}
+
+.SearchBar__search__input__wrapper,
+.SearchBar__search__input {
+  border: none !important;
+  height: 100%;
+  width: 100%;
 }
