--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -4,5 +4,17 @@
   box-sizing: border-box;
   border-top: 4px solid var(--grey-lighter);
   overflow: auto;
-  padding: var(--component-spacing-sm);
+}
+
+.ContextBox__items {
+}
+
+.ContextBox__item {
+  padding: var(--space-xs);
+  border-bottom: 1px solid var(--grey-lighter);
+  border-left: 3px solid transparent;
+
+  &.active {
+    background-color: var(--grey-bg);
+  }
 }
