Allow tag to be hided from main page (#7)
* Add tag hidden function

* Add revert function

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/screens/hub/HubExecutableDetailScreen/HubExecutableDetailScreen.less
+++ b/client/src/screens/hub/HubExecutableDetailScreen/HubExecutableDetailScreen.less
@@ -7,11 +7,9 @@
 }
 
 .HubExecutableDetailScreen__processes {
-  margin-top: var(--component-spacing-md);
 }
 
 .HubExecutableDetailScreen__processes__item {
+  padding: var(--component-spacing-sm) 0;
   border-bottom: var(--border);
-  padding-bottom: var(--component-spacing-sm);
-  margin-bottom: var(--component-spacing-sm);
 }
