--- a/client/src/ui/components/Segment/Segment.less
+++ b/client/src/ui/components/Segment/Segment.less
@@ -8,13 +8,13 @@
     border: var(--border);//box-shadow: 0 30px 100px -40px rgba(0, 0, 0, 0.3);
 
     &.primary {
-      border-color: var(--primary-bg);
+      border-color: var(--primary-lighter);
     }
     &.positive {
-      border-color: var(--positive-bg);
+      border-color: var(--positive-lighter);
     }
     &.negative {
-      border-color: var(--negative-bg);
+      border-color: var(--negative-lighter);
     }
     &.secondary {
       background-color: var(--grey-bg);
