--- a/client/src/screens/hub/HubTagDetailScreen/HubTagDetailScreen.less
+++ b/client/src/screens/hub/HubTagDetailScreen/HubTagDetailScreen.less
@@ -2,3 +2,13 @@
   border-bottom: var(--border);
   padding: var(--component-spacing-md) 0;
 }
+
+.HubTagDetailScreen__settings {
+  .TagSettingForm, .TagSettingForm .TagSettingForm__field__wrapper:first-child {
+    margin-top: 0;
+  }
+}
+
+.HubTagDetailScreen__form__title {
+  margin: var(--component-spacing-md) 0 var(--component-spacing-xs) !important;
+}
