--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -6,15 +6,79 @@
   overflow: auto;
 }
 
-.ContextBox__items {
+.ContextBox__table__wrapper {
+  overflow-y: auto;
+  width: auto;
+  white-space: nowrap;
 }
 
-.ContextBox__item {
-  padding: var(--space-xs);
-  border-bottom: 1px solid var(--grey-lighter);
-  border-left: 3px solid transparent;
+.ContextBox__table {
+  width: auto;
+  min-width: 100%;
+  font-size: var(--text-md);
 
-  &.active {
+  .ContextBox__table__item:nth-child(2n) {
     background-color: var(--grey-bg);
   }
+}
+
+.ContextBox__table__header {
+  background-color: var(--grey-bg);
+  color: var(--grey-dark);
+  text-align: center;
+  font-size: var(--text-md);
+
+  td {
+    padding: var(--space-xxxs);
+    border-right: 1px solid var(--grey-lighter);
+    border-top: 1px solid var(--grey-lighter);
+    border-bottom: 1px solid var(--grey-lighter);
+  }
+
+  td:last-child {
+    border-right: none;
+  }
+}
+
+.ContextBox__table__subheader {
+  background-color: var(--grey-lighter);
+  color: var(--grey-darker);
+  font-size: var(--text-sm);
+
+  td {
+    padding: var(--space-xxxs) var(--space-xxs);
+    border-bottom: 1px solid var(--grey-lighter);
+  }
+}
+
+.ContextBox__table__item {
+  font-size: var(--text-sm);
+  color: var(--grey);
+
+  &.active {
+    background-color: var(--grey-lighter) !important;
+
+    td:first-child {
+      border-left-color: inherit;
+    }
+  }
+
+  td {
+    padding: 4px;
+  }
+
+  td:first-child {
+    border-left: 3px solid transparent;
+  }
+}
+
+.ContextBox__table__item__tag {
+}
+
+.ContextBox__table__item__tag__dot {
+  display: inline-block;
+  width: 0.5em;
+  height: 0.5em;
+  border-radius: 50%;
+  margin-right: var(--component-spacing-sm);
 }
