Add ability to go to create tag screen from panel popup (#16)

--- a/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
@@ -64,7 +64,18 @@
 }
 
 .TagPopUp__tags__title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   margin-bottom: var(--component-spacing-xs) !important;
+
+  a {
+    text-decoration: none;
+  }
+}
+
+.TagPopUp__tags__title {
 }
 
 .TagPopUp__tags__item {
