--- a/client/src/screens/hub/HubExecutableDetailScreen/HubExecutableDetailScreen.less
+++ b/client/src/screens/hub/HubExecutableDetailScreen/HubExecutableDetailScreen.less
@@ -13,3 +13,7 @@
   padding: var(--component-spacing-sm) 0;
   border-bottom: var(--border);
 }
+
+.HubExecutableDetailScreen__settings__title {
+  margin: var(--component-spacing-md) 0 var(--component-spacing-xs) !important;
+}
