--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -54,7 +54,7 @@
   z-index: 9999;
   border: 1px solid var(--primary-lighter);
   border-radius: var(--border-radius) 0 0 var(--border-radius);
-  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--box-shadow);
   background-color: #FFF;
 
   &.open {
