--- a/client/src/themes/basic/constants.less
+++ b/client/src/themes/basic/constants.less
@@ -6,4 +6,5 @@
   --border-radius: 0.2em;
   --border-color: var(--grey-lighter);
   --border: 1px solid var(--border-color);
+  --box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
 }
