Ability to recover panel state from URL (#28)

--- a/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
@@ -114,7 +114,7 @@
     }
 
     &.focus {
-      stroke: var(--primary-dark) !important;
+      stroke: var(--primary) !important;
       stroke-width: 3 !important;
     }
   }
@@ -133,6 +133,6 @@
   }
 
   .HoverLine {
-    stroke: var(--primary-darker);
+    stroke: var(--grey-light);
   }
 }
