--- a/client/src/screens/hub/HubMainScreen/components/PopUp/PopUp.less
+++ b/client/src/screens/hub/HubMainScreen/components/PopUp/PopUp.less
@@ -5,6 +5,7 @@
 .PopUp {
   position: absolute;
   box-sizing: border-box;
+  height: 0;
 
   &.xGap {
     padding: 0 @gap;
@@ -19,8 +20,6 @@
   position: relative;
   padding: var(--component-spacing-xs);
   box-sizing: border-box;
-  height: inherit;
-  max-height: inherit;
   overflow-y: auto;
   background-color: #FFF;
   border: 1px solid var(--primary-lighter);
