--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -2,8 +2,9 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  border-top: 4px solid var(--grey-lighter);
   overflow: hidden;
+  background-color: #FFF;
+  margin: auto;
 }
 
 .ContextBox__content {
@@ -23,7 +24,7 @@
   font-size: var(--text-md);
 
   .ContextBox__table__item:nth-child(2n) {
-    background-color: var(--grey-bg);
+    background-color: #FAFAFA;
   }
 }
 
@@ -36,7 +37,6 @@
   td {
     padding: var(--space-xxxs);
     border-right: 1px solid var(--grey-lighter);
-    border-top: 1px solid var(--grey-lighter);
     border-bottom: 1px solid var(--grey-lighter);
   }
 
@@ -46,7 +46,7 @@
 }
 
 .ContextBox__table__subheader {
-  background-color: var(--grey-lighter);
+  background-color: #EEE;
   color: var(--grey-darker);
   font-size: var(--text-sm);
 
