--- a/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
@@ -4,9 +4,10 @@
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: var(--grey-bg-light);
   overflow: hidden;
   user-select: none;
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+  background-color: var(--grey-bg-light);
 }
 
 .ControlPanel__svg {
