--- a/client/src/screens/hub/HubMainScreen/components/SearchBar/SearchBar.less
+++ b/client/src/screens/hub/HubMainScreen/components/SearchBar/SearchBar.less
@@ -1,17 +1,95 @@
+@import '../../../../../vars';
+
 .SearchBar {
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: #FFF;
   box-sizing: border-box;
-  border-bottom: 1px solid var(--grey-lighter);
+  padding: 0 5px;
 }
 
-.SearchBar__search__input__wrapper,
+.SearchBar__search {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 50%;
+  height: calc(100% - 10px);
+  background-color: #FFF;
+  border-radius: var(--border-radius);
+
+  @media @lg-max {
+    width: 75%;
+  }
+
+  @media @md-max {
+    width: 100%;
+  }
+}
+
+.SearchBar__search__icon {
+  display: block;
+  font-size: 1.2em !important;
+  margin: 0 var(--component-spacing-sm) !important;
+  color: var(--grey-dark) !important;
+
+  &.clickable {
+    margin: 0 var(--component-spacing-xs) !important;
+    border-radius: 50%;
+    cursor: pointer;
+    width: 2em;
+    height: 2em;
+    line-height: 2em;
+    text-align: center;
+    transition: background-color 110ms ease;
+    user-select: none;
+
+    &:hover {
+      background-color: var(--grey-lighter);
+    }
+
+    &:active {
+      background-color: var(--grey-light-xx);
+    }
+  }
+
+  &.clear {
+    /* FIXME: Change to icon */
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    &:before, &:after {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 1em;
+      height: 2px;
+      background-color: var(--grey-light);
+      left: calc(50% - 0.5em);
+    }
+
+    &:before {
+      transform: rotate(-45deg);
+    }
+
+    &:after {
+      transform: rotate(45deg);
+    }
+  }
+}
+
+.SearchBar__search__input__wrapper {
+  flex: 1 1;
+  border-radius: 0 !important;
+  height: 100%;
+}
+
 .SearchBar__search__input {
+  font-size: var(--text-md) !important;
   border: none !important;
   height: 100%;
   width: 100%;
+  padding: 0 !important;
 }
