Show tags in related experiment detail screen (#31)
* Support showing tags on related runs

* Ability to navigate to tag screen

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/screens/hub/HubExperimentScreen/HubExperimentScreen.less
+++ b/client/src/screens/hub/HubExperimentScreen/HubExperimentScreen.less
@@ -18,6 +18,19 @@
   }
 }
 
+.HubExperimentScreen__header__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.HubExperimentScreen__header__tags {
+  a {
+    text-decoration: none;
+  }
+}
+
 .HubExperimentScreen__grid {
   display: block;
   overflow: hidden;
