--- a/client/src/screens/hub/HubExperimentScreen/HubExperimentScreen.less
+++ b/client/src/screens/hub/HubExperimentScreen/HubExperimentScreen.less
@@ -2,7 +2,7 @@
 
 .HubExperimentScreen__header {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 200px 1fr;
   grid-column-gap: var(--component-spacing-md);
   align-items: center;
 
@@ -22,7 +22,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
 
+.HubExperimentScreen__header__content__process {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  > * {
+    margin-right: var(--component-spacing-sm);
+  }
 }
 
 .HubExperimentScreen__header__tags {
