Ability to list and edit parameters of attached TF Summary logs (#53)
* Add HubTFSummaryListScreen component showing attached logs

* Add tf_summary_logs table for storing information about logs

* Add form to parse and save log parameters for faster search and comparison

* Add ability to search tf scalars by params

--- a/client/src/ui/components/Container/Container.less
+++ b/client/src/ui/components/Container/Container.less
@@ -16,27 +16,27 @@
 
   @media @sm-min {
     &.standard {
-     width: ~'@{sm-breakpoint}px';
+     width: ~'calc(@{sm-breakpoint}px - @{header-width})';
     }
 
     &.small {
-      width: ~'@{sm-breakpoint}px';
+      width: ~'calc(@{sm-breakpoint}px - @{header-width})';
     }
   }
 
   @media @md-min {
     &.standard {
-     width: ~'@{md-breakpoint}px';
+     width: ~'calc(@{md-breakpoint}px - @{header-width})';
     }
 
     &.small {
-      width: ~'@{md-breakpoint}px';
+      width: ~'calc(@{md-breakpoint}px - @{header-width})';
     }
   }
 
   @media @lg-min {
     &.standard {
-     width: ~'@{lg-breakpoint}px';
+     width: ~'calc(@{lg-breakpoint}px - @{header-width})';
     }
 
     &.small {
