Ability to navigate to tf logs screen from main sidebar (#55)

--- a/client/src/components/global/Header/Header.less
+++ b/client/src/components/global/Header/Header.less
@@ -110,6 +110,12 @@
   font-size: var(--text-lg) !important;
 }
 
+.Header__item__icon__svg {
+  fill: #FFF;
+  width: 20px;
+  margin: auto;
+}
+
 .Header__item__title {
   font-size: var(--text-xs) !important;
   transition: all 110ms ease;
