--- a/client/src/screens/hub/HubTFSummaryListScreen/HubTFSummaryListScreen.less
+++ b/client/src/screens/hub/HubTFSummaryListScreen/HubTFSummaryListScreen.less
@@ -3,7 +3,10 @@
 @tree-bg-color: #FFF;
 
 .HubTFSummaryListScreen__content {
+}
 
+.HubTFSummaryListScreen__desc {
+  margin: var(--component-spacing-xs) 0 var(--component-spacing-md) !important;
 }
 
 .HubTFSummaryListScreen__tree {
@@ -33,8 +36,8 @@
     height: 6px;
     width: 6px;
     background-color: var(--grey);
-    box-shadow: 0 0 0 4px var(--grey-lighter), 0 0 0 12px @tree-bg-color;
-    border-radius: 50%;
+    box-shadow: 0 0 0 3px var(--grey-lighter), 0 6px 0 8px #FFF;
+    border-radius: 1px;
   }
 
   > * {
