--- a/client/src/screens/hub/HubMainScreen/components/SearchBar/SearchBar.less
+++ b/client/src/screens/hub/HubMainScreen/components/SearchBar/SearchBar.less
@@ -14,11 +14,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 50%;
+  width: 100%;
   height: calc(100% - 10px);
   background-color: #FFF;
   border-radius: var(--border-radius);
 
+  /*
   @media @lg-max {
     width: 75%;
   }
@@ -26,6 +27,7 @@
   @media @md-max {
     width: 100%;
   }
+   */
 }
 
 .SearchBar__search__icon {
