--- a/client/src/screens/hub/HubTFSummaryListScreen/HubTFSummaryListScreen.less
+++ b/client/src/screens/hub/HubTFSummaryListScreen/HubTFSummaryListScreen.less
@@ -6,11 +6,12 @@
 }
 
 .HubTFSummaryListScreen__desc {
-  margin: var(--component-spacing-xs) 0 var(--component-spacing-md) !important;
+  margin: var(--component-spacing-xs) 0 var(--component-spacing-xs) !important;
 }
 
 .HubTFSummaryListScreen__tree {
   background-color: @tree-bg-color;
+  border-left: 3px solid var(--grey-lighter);
 }
 
 .HubTFSummaryListScreen__node {
