Make table header stick to the top of context area (#61)

--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -29,13 +29,15 @@
 }
 
 .ContextBox__table__topheader {
-  background-color: var(--grey-bg);
   color: var(--grey);
 
   td {
+    background-color: var(--grey-bg);
     padding: 2px var(--space-xxs);
     border-bottom: 1px solid var(--grey-lighter);
     text-transform: uppercase;
+    position: sticky;
+    top: 0;
   }
 }
 
