Add ability to export canvas as JPEG (#63)
* [fix] Performance improvement for Panel rendering

* [feat] Added disabled state to export button for empty panel

* Remove hover state elements from exported chart

--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -39,6 +39,21 @@
     background-color: var(--primary-bg);
     color: var(--primary);
   }
+
+  &.disabled {
+    opacity: 0.65;
+    cursor: default;
+
+    &:hover {
+      background-color: initial;
+      color: var(--grey);
+    }
+
+    &:active, &.active {
+      background-color: initial;
+      color: var(--grey);
+    }
+  }
 }
 
 .ControlsSidebar__menu {
