--- a/client/src/screens/hub/HubMainScreen/HubMainScreen.less
+++ b/client/src/screens/hub/HubMainScreen/HubMainScreen.less
@@ -1,6 +1,6 @@
 @import '../../../vars';
 
-@search-height: 55px;
+@search-filter-height: 0fr;
 @controls-width: 75px;
 @padding: 0px;
 
@@ -34,21 +34,23 @@
   background-color: var(--grey-lighter);
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: @search-height 5fr 3fr;
+  grid-template-rows: @search-filter-height 4fr 4fr;
 
   > div {
     box-sizing: border-box;
-    overflow: hidden;
   }
 }
 
-.HubMainScreen__grid__search {
+.HubMainScreen__grid__search-filter {
+  padding: 5px;
 }
 
 .HubMainScreen__grid__panel {
   margin: 0 5px;
+  overflow: hidden;
 }
 
 .HubMainScreen__grid__context {
-  padding-top: 5px;
+  overflow: hidden;
+  padding: 5px 0;
 }
