--- a/client/src/screens/hub/HubMainScreen/components/SearchBar/SearchBar.less
+++ b/client/src/screens/hub/HubMainScreen/components/SearchBar/SearchBar.less
@@ -5,9 +5,7 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
-  height: 100%;
   box-sizing: border-box;
-  padding: 0 5px;
 }
 
 .SearchBar__search {
@@ -15,9 +13,9 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
-  height: calc(100% - 10px);
   background-color: #FFF;
   border-radius: var(--border-radius);
+  height: 2.5em;
 
   /*
   @media @lg-max {
