Hide processes icon from left sidebar (#79)

--- a/client/src/components/global/Header/Header.less
+++ b/client/src/components/global/Header/Header.less
@@ -107,7 +107,7 @@
 }
 
 .Header__item__icon {
-  font-size: var(--text-lg) !important;
+  font-size: var(--text-xl) !important;
 }
 
 .Header__item__icon__svg {
