--- a/client/src/wrappers/hub/ProjectWrapper/ProjectWrapper.less
+++ b/client/src/wrappers/hub/ProjectWrapper/ProjectWrapper.less
@@ -25,6 +25,18 @@
   }
 }
 
+.ProjectWrapper__breadcrumb__icon {
+  vertical-align: middle;
+  color: var(--primary);
+  text-decoration: none;
+  cursor: default;
+
+  &:hover, &:focus, &:active {
+    color: var(--primary);
+    text-decoration: none;
+  }
+}
+
 .ProjectWrapper__navbar__wrapper {
   @media (max-width: @horiz-breakpoint) {
     overflow-x: auto;
