Show process duration (#81)

--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -39,6 +39,13 @@
   }
 }
 
+.ContextBox__table__topheader__item__name {
+  text-transform: none !important;
+  font-size: var(--text-sm) !important;
+  font-weight: 500 !important;
+  letter-spacing: 0.05rem;
+}
+
 .ContextBox__table__header {
   background-color: var(--grey-bg);
   color: var(--grey-dark);
@@ -82,6 +89,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.ContextBox__table__subheader__item__name {
+  text-transform: none !important;
+  font-size: var(--text-sm) !important;
+  letter-spacing: 0.08rem;
 }
 
 .ContextBox__table__item {
