[feat] Add ability to zoom in/out panel charts (#82)
* Apply zooming functionality for panel chart

* Toggle zooming by chart index

* Improve ui for controls items

--- a/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
@@ -98,6 +98,14 @@
 }
 
 .PanelChart__svg {
+  rect {
+    cursor: crosshair;
+  }
+  .brush {
+    rect {
+      cursor: zoom-in;
+    }
+  }
   .HoverCircle {
     stroke: var(--primary);
     stroke-width: 1 !important;
