--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -119,7 +119,7 @@
 
 .ContextBox__table__group-indicator {
   position: sticky;
-  top: calc(var(--space-xs) + var(--text-height-sm) + 1px);
+  top: 0;
   left: 0;
   z-index: 4;
   padding: var(--space-xxs) var(--space-sm);
@@ -133,6 +133,21 @@
     & > * {
       margin-right: var(--space-xs);
     }
+  }
+}
+
+.ContextBox__table__group-indicator__chart {
+  display: inline-block;
+  width: var(--space-sm);
+  height: var(--space-sm);
+  border: 1px solid;
+  border-radius: var(--border-radius);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .Text {
+    font-size: 0.6em;
   }
 }
 
@@ -183,9 +198,9 @@
   }
 }
 
-.ContextBox__table__group-indicator_placeholder  {
+.ContextBox__table__group-indicator__placeholder  {
   position: sticky;
-  top: calc(var(--space-xs) + var(--text-height-sm) + 1px);
+  top: 0;
   z-index: 3;
   padding: var(--space-xxs) var(--space-sm);
   background-color: #f5f5f5 !important;
@@ -194,7 +209,7 @@
 
 .ContextBox__table__group-aggregation {
   position: sticky;
-  top: calc(var(--space-xs) + var(--text-height-sm) + 1px);
+  top: 0;
   right: 0;
   z-index: 3;
   padding: var(--space-xxs) var(--space-sm);
@@ -274,8 +289,8 @@
 @media not all and (min-resolution:.001dpcm)
 { @supports (-webkit-appearance:none) {
   .ContextBox__table__group-indicator,
-  .ContextBox__table__group-indicator_placeholder,
+  .ContextBox__table__group-indicator__placeholder,
   .ContextBox__table__group-aggregation {
-    top: initial;
+    top: initial !important;
   }
 }}
