--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -14,18 +14,26 @@
 
 .ControlsSidebar__item__wrapper {
   position: relative;
+
+  &:hover {
+    .ControlsSidebar__item__popup__opener {
+      opacity: 1;
+    }
+  }
 }
 
 .ControlsSidebar__item {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: var(--component-spacing-sm);
+  width: 45px;
+  height: 45px;
   margin-bottom: var(--component-spacing-xs);
   border-radius: var(--border-radius);
   border: 1px solid transparent;
   color: var(--grey);
   cursor: pointer;
+  user-select: none;
   transition: background-color 110ms ease, color 110ms ease;
 
   &:hover {
@@ -56,10 +64,10 @@
   }
 }
 
-.ControlsSidebar__item__popup  {
+.ControlsSidebar__item__popup {
   position: absolute;
   top: 0;
-  right: calc(54px + var(--component-spacing-sm));
+  right: 65px;
   background-color: #fff;
   outline: 0;
   width: 350px;
@@ -68,6 +76,10 @@
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
   z-index: 9999;
+
+  &.list {
+    width: 250px;
+  }
 }
 
 .ControlsSidebar__item__popup__header {
@@ -84,4 +96,72 @@
 .ControlsSidebar__item__popup__body__field {
   margin-top: var(--component-spacing-xs);
   margin-right: var(--component-spacing-xs);
+}
+
+.ControlsSidebar__item__popup__list__item {
+  padding: var(--component-spacing-xs) var(--component-spacing-sm);
+  border-bottom: 1px solid var(--grey-lighter);
+  text-transform: capitalize;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+  &:last-of-type {
+    border-bottom: none;
+  }
+
+  &:hover {
+    background-color: var(--grey-bg);
+  }
+
+  &.active {
+    background-color: var(--primary);
+    color: #FFF;
+  }
+
+  & > .Text {
+    margin-right: var(--component-spacing-xs);
+  }
+}
+
+.ControlsSidebar__item__popup__opener {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  opacity: 0;
+  transform: translate(-14px, 0px);
+  width: 15px;
+  height: 45px;
+  align-items: center;
+  justify-content: center;
+  border-top-right-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
+  border: 1px solid transparent;
+  cursor: pointer;
+  user-select: none;
+  transition: opacity 700ms cubic-bezier(0.19, 1, 0.22, 1);
+
+  .chevron_left {
+    display: inline-block;
+    transform: rotate(0deg);
+    transition: transform 700ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+  &:hover {
+    background-color: var(--grey-bg);
+    color: var(--grey-dark);
+    opacity: 1;
+  }
+
+  &:active, &.active {
+    background-color: var(--primary-bg);
+    border-color: var(--primary-lighter);
+    color: var(--primary);
+    opacity: 1;
+
+    .chevron_left {
+      transform: rotate(180deg);
+    }
+  }
 }
