[feat] Add runs dashboard (#84)
* Add experiments actions menu

* Ability to reset selected experiments

* Create Table component to unify table styles accros different screens

* Render metrics table

* Add explore method for metrics

* Apply numeric filter to color interpolation

* Display empty message if no runs were recorded

* Apply scrolling to dashboard table

Co-authored-by: Ruben Karapetyan <karapetyanrouben@gmail.com>

--- a/client/src/ui/components/Menu/Menu.less
+++ b/client/src/ui/components/Menu/Menu.less
@@ -1,5 +1,7 @@
 @import '../../../vars';
 
+@activeCheckSize: 10px;
+
 .Menu {
   overflow: hidden;
 
@@ -55,6 +57,8 @@
 }
 
 .MenuItem {
+  display: flex;
+  align-items: center;
   padding: var(--component-spacing-sm);
   font-size: var(--text-sm);
   color: var(--primary);
@@ -67,6 +71,22 @@
     font-weight: 700;
     color: var(--grey-darker);
     border-left: 3px solid var(--primary);
+  }
+
+  &.activeCheck {
+    font-weight: 700;
+    color: var(--grey-darker);
+
+    &:before {
+      content: '';
+      display: block;
+      flex-shrink: 0;
+      width: @activeCheckSize;
+      height: @activeCheckSize;
+      background-color: var(--primary);
+      margin-right: var(--component-spacing-xs);
+      border-radius: var(--border-radius);
+    }
   }
 }
 
