--- a/client/src/components/global/Header/Header.less
+++ b/client/src/components/global/Header/Header.less
@@ -117,6 +117,6 @@
 }
 
 .Header__item__title {
-  font-size: var(--text-xs) !important;
+  font-size: 11px !important;
   transition: all 110ms ease;
 }
