--- a/client/src/ui/components/Button/Button.less
+++ b/client/src/ui/components/Button/Button.less
@@ -32,7 +32,7 @@
   box-shadow: none;
 
   display: inline-flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   position: relative;
   white-space: nowrap;
@@ -40,7 +40,7 @@
   box-sizing: border-box;
   cursor: pointer;
 
-  padding: 0.68em 1.15em;
+  padding: 0;
   line-height: 1em;
   border: 1px solid transparent;
   border-radius: calc(var(--border-radius));
@@ -222,13 +222,51 @@
 
   &.large {
     font-size: var(--button-lg);
-    padding: 0.95em 2.2em;
+
+    .Button__content {
+      padding: 0.95em 2.2em;
+    }
+    .Button__icon {
+      padding: 0.8em 0.7em;
+    }
   }
 
   &.disabled {
     pointer-events: none;
     opacity: 0.65;
     cursor: default;
+  }
+}
+
+.Button__content {
+  padding: 0.68em 1.15em;
+}
+
+.Button__icon {
+  display: flex;
+  align-items: center;
+  font-size: 1.3em;
+  background-color: rgba(0, 0, 0, 0.2);
+  min-width: 2em;
+  text-shadow: inherit;
+  position: relative;
+
+  &.left {
+    border-right: 1px solid rgba(0, 0, 0, 0.21);
+  }
+  &.right {
+    border-left: 1px solid rgba(0, 0, 0, 0.21);
+  }
+
+  .Icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
