Add sidebar submenu and ability to reset applied controls (#92)
* Reuse last explore config when navigating from sidebar

* Add sidebar submenu

* Add reset controls functionality in explore panel

* Add tooltips for table column action

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/components/ColumnGroupPopup/ColumnGroupPopup.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/components/ColumnGroupPopup/ColumnGroupPopup.less
@@ -12,7 +12,7 @@
   z-index: 999;
   margin-top: 4px;
   right: calc(-1 * var(--space-sm));
-  top: var(--space-md);
+  top: 22px;
 }
 
 .ContextBox__table__group__popup__header {
