--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -119,6 +119,15 @@
     color: #FFF;
   }
 
+  &.text_normalized {
+    text-transform: none;
+  }
+
+  &.disabled {
+    pointer-events: none;
+    opacity: 0.4;
+  }
+
   & > .Text {
     margin-right: var(--component-spacing-xs);
   }
