--- a/client/src/ui/components/Tooltip/Tooltip.less
+++ b/client/src/ui/components/Tooltip/Tooltip.less
@@ -7,11 +7,11 @@
   box-sizing: border-box;
   position: fixed;
   padding: var(--space-xxs) var(--space-sm);
-  background-color: rgba(10, 10, 10, 0.75);
-  border: 1px solid rgb(10, 10, 10);
+  background-color: rgba(88, 96, 105, 0.9);
   border-radius: var(--border-radius);
   color: #FFF;
   white-space: nowrap;
   z-index: 99999;
   font-size: 0.85rem;
+  font-weight: normal;
 }
