--- a/client/src/screens/hub/HubExperimentsDashboardScreen/HubExperimentsDashboardScreen.less
+++ b/client/src/screens/hub/HubExperimentsDashboardScreen/HubExperimentsDashboardScreen.less
@@ -23,34 +23,13 @@
 }
 
 .HubExperimentsDashboardScreen__runs__content {
-  width: calc(100% - 2px);
+  height: 100%;
 }
 
 .HubExperimentsDashboardScreen__runs__table__wrapper {
+  height: 100%;
   width: auto;
   white-space: nowrap;
-
-  .Table {
-    background-color: #FFF;
-  }
-
-  .Table__topheader th {
-    position: sticky;
-    top: 0;
-    border: none;
-    box-shadow: inset 1px -1px 0 0 #CCC, inset 1px 1px 0 0 #CCC, 1px 0px 0 0 #CCC;
-
-    &:first-of-type {
-      left: 0;
-      z-index: 8;
-    }
-  }
-}
-
-.Table__subheader__item__name {
-  .HubExperimentsDashboardScreen__runs__context__item:last-child {
-    margin-right: 0 !important;
-  }
 }
 
 .HubExperimentsDashboardScreen__runs__context__cell {
@@ -64,6 +43,10 @@
   background-color: var(--grey-light-xx) !important;
   color: var(--grey-dark) !important;
   border: 1px solid var(--grey-light-x) !important;
+
+  &:last-child {
+    margin-right: 0 !important;
+  }
 }
 
 .HubExperimentsDashboardScreen__runs__context__icon {
@@ -74,8 +57,6 @@
 }
 
 .HubExperimentsDashboardScreen__runs__item__cell {
-  cursor: pointer;
-
   &.active {
     background-color: var(--primary-lighter) !important;
   }
