--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/components/ColumnGroupPopup/ColumnGroupPopup.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/components/ColumnGroupPopup/ColumnGroupPopup.less
@@ -1,18 +1,15 @@
 @import '../../../../../../../vars.less';
 
 .ContextBox__table__group__popup {
-  position: absolute;
+  position: fixed;
   background-color: #fff;
   outline: 0;
-  width: 180px;
+  width: 200px;
   overflow-y: auto;
   border: 1px solid var(--primary-lighter);
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
   z-index: 999;
-  margin-top: 4px;
-  right: calc(-1 * var(--space-sm));
-  top: 22px;
 }
 
 .ContextBox__table__group__popup__header {
